[gd_scene load_steps=4 format=3 uid="uid://t80kb6s3c7ht"]

[ext_resource type="Script" path="res://Scenes/MainUI/EndOfDayReport/ObjectiveReport.gd" id="1_1kvbk"]
[ext_resource type="Texture2D" uid="uid://ya26myenw3dg" path="res://Sprites/UI/Movement/check.png" id="2_nwuri"]
[ext_resource type="Texture2D" uid="uid://yi348bghvfsa" path="res://Sprites/UI/DefaultButton/normalDefaultItem.png" id="3_5v4sv"]

[node name="ObjectiveReport" type="HBoxContainer"]
script = ExtResource("1_1kvbk")

[node name="Status" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_nwuri")

[node name="IconStatus" type="TextureRect" parent="Status"]
layout_mode = 2
offset_left = 4.0
offset_right = 4.0

[node name="TextureType" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_5v4sv")

[node name="IconType" type="TextureRect" parent="TextureType"]
layout_mode = 2
offset_left = 4.0
offset_right = 4.0

[node name="TextureChar" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_5v4sv")

[node name="IconChar" type="TextureRect" parent="TextureChar"]
layout_mode = 2
offset_left = 4.0
offset_right = 4.0

[node name="TextureWanted" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_5v4sv")

[node name="IconWanted" type="TextureRect" parent="TextureWanted"]
layout_mode = 2
offset_left = 4.0
offset_right = 4.0

[node name="TextureReward" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_5v4sv")

[node name="IconReward" type="TextureRect" parent="TextureReward"]
layout_mode = 2
offset_left = 4.0
offset_right = 4.0
